# Blog-Actix-

./: .env  Cargo.toml  blog-actix.db
migrations/2021-07-25-055204_create_users/: down.sql  up.sql
migrations/2021-07-29-042945_create_posts/: up.sql
migrations/2021-07-29-070147_create_comments/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/routes/: comments.rs  posts.rs  users.rs
