[package]
name = "blog-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
env_logger = "0.6.0"
futures = "0.1.1"
serde = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.10.1"


